--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <title>Real Estate</title>
+    <title>Real Estate 1</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
